# NEXTERader

./: CMakeLists.txt  NEInit.h  README.md  README.md.backup  main.cpp
3rd/Sophus-1.22.10/: CMakeLists.txt  appveyor.yml
3rd/Sophus-1.22.10/.github/workflows/: main.yml
3rd/fmt/: CMakeLists.txt
3rd/fmt/doc/: conf.py
3rd/fmt/doc/html/_static/: basic.css  doctools.js  jquery-3.5.1.js
3rd/fmt/src/: fmt.cc
3rd/fmt/support/: manage.py
3rd/fmt/support/cmake/: JoinPaths.cmake
3rd/fmt/test/: CMakeLists.txt  module-test.cc
3rd/fmt/test/gtest/: gmock-gtest-all.cc
3rd/spdlog/include/spdlog/fmt/: chrono.h  compile.h  fmt.h  ostr.h  ranges.h  std.h  xchar.h
Config/: config.yaml  configL.yaml  configR.yaml
Config (copy)/: config.yaml  configL.yaml  configR.yaml
DebugGui/: NEDemarcatePose.cpp  NEDemarcatePose.h
Framework/: Framework.h  MulThrCV.cpp  MulThrCV.h
IOManager/: IODataDefine.hpp  IOManager.cpp  IOManager.hpp  RmCRC.cpp  RmCRC.h
ImgStream/: NEImgStream.cpp  NEImgStream.h
ImgStream/hik_camera/: HikCam.cpp  HikCam.hpp  README.md
NERadar/: Radar.cpp  Radar.hpp
Net/: NENet.cpp  NENet.h
Net/TRTInfer/include/: Inference.h
Net/TRTInfer/src/: Inference.cpp
ReadConfig/: NEConfig.cpp  NEConfig.h
Robot/: NERobot.h  NERobotPosition.cpp  NERobotPosition.h  RobotDefine.hpp
Serial/include/: NESerial.h  RmCRC.h
Serial/src/: NESerial.cpp  RmCRC.cpp
SolvePosition/: NESolvePosition.cpp  NESolvePosition.h
StereoSolvePosition/: StereoSolveDefine.hpp  StereoSolvePosition.cpp  StereoSolvePosition.hpp
Tracker/: Tracker.cpp  Tracker.hpp
